@@ -2,6 +2,8 @@ ubiquity (1.2.6) UNRELEASED; urgency=low
 
   * Defend a bit more against the apt cache going insane (closes: Malone
     #67689).
+  * Handle EFAULT IOError exceptions while copying files (closes: Malone
+    #67598).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Oct 2006 11:00:32 +0100
 
